# d2d-sandbox

./: Cargo.toml
src/: gui.rs  main.rs
src/examples/: brushes.rs  geometries.rs  mod.rs
src/helpers/: event.rs  mod.rs  msg.rs  strings.rs  wnd.rs
